--- a/index.html
+++ b/index.html
@@ -22,6 +22,18 @@
         </nav>
     </header>
 
+    <div class="top-content">
+        <div class="main-text">
+            <h1 class="title">This website is awesome</h1>
+            <p class="secondary-text">This website das some subtext that goes here under the main title. it's a smaller font and the color is
+                lower contrast</p>
+            <button class="btn">Sign up</button>
+        </div>
+        <div class="image">
+            <img src="" alt="">
+        </div>
+    </div>
+
 </body>
 
 </html>
