feat: add information section and apply styling

--- a/index.html
+++ b/index.html
@@ -25,12 +25,34 @@
     <div class="top-content">
         <div class="main-text">
             <h1 class="title">This website is awesome</h1>
-            <p class="secondary-text">This website das some subtext that goes here under the main title. it's a smaller font and the color is
+            <p class="secondary-text">This website das some subtext that goes here under the main title. it's a smaller
+                font and the color is
                 lower contrast</p>
             <button class="btn">Sign up</button>
         </div>
         <div class="image">
             <img src="" alt="">
+        </div>
+    </div>
+
+    <div class="info">
+        <div class="infoheader">Some random information.</div>
+        <div class="imgcontent">
+            <div>
+                <img class="illustration" src="" alt="">
+                <p>this is some subtext under an illustration or image</p>
+            </div>
+            <div>
+                <img class="illustration" src="" alt="">
+                <p>this is some subtext under an illustration or image</p>
+            </div>
+            <div>
+                <img class="illustration" src="" alt="">
+                <p>this is some subtext under an illustration or image</p>
+            </div>
+            <div><img class="illustration" src="" alt="">
+                <p>this is some subtext under an illustration or image</p>
+            </div>
         </div>
     </div>
 
