--- a/index.html
+++ b/index.html
@@ -56,6 +56,15 @@
         </div>
     </div>
 
+    <div class="quote">
+        <div>
+            <p class="quote-text">This is an inspiring quote, or a testimoniale from a customer.
+                Maybe it's just filling up space, or mayber people will actually read it.
+                Who knows? All I know is that it looks nice.
+            </p>
+            <p class="quote-author">-Thor, God of Thunder</p>
+        </div>
+    </div>
 </body>
 
 </html>
