--- a/index.html
+++ b/index.html
@@ -76,6 +76,10 @@
         </div>
 
     </div>
+
+    <footer>
+        <div>Copyright © The Odin Project 2021</div>
+    </footer>
 </body>
 
 </html>
